fixing navbar overflow when too big

--- a/core/static_src/core/scss/components/navbar.scss
+++ b/core/static_src/core/scss/components/navbar.scss
@@ -83,6 +83,8 @@ $small-navbar-height: rem-calc(54);
     @include container;
     height: 100%;
     display: block;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
 
